# local-expert-llm

./: .gitignore  CMakeLists.txt  Dockerfile  LLAMA_CONCEPTS.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
build_container/: compile_commands.json
build_container/LocalLLM_autogen/: mocs_compilation.cpp
build_container/LocalLLM_autogen/UVLADIE3JM/: moc_llamaworker.cpp.d  moc_mainwindow.cpp.d
context/: input_context.txt
src/: consolelogger.cpp  consolelogger.h  llamaworker.cpp  llamaworker.h  llmcontroller.cpp  llmcontroller.h  main.cpp  mainwindow.cpp  mainwindow.h
